sass/ppc.scss
/* ... */
// FAQs
// =============================================================================

.faqs {
    @include rfs(7.5rem, margin-top);
}

.faq {
    &__icon {
        color: $accent;
        line-height: 1.6;
    }
    &__btn {
        position: relative;
        text-transform: none;
        @include font-size(1.25rem);
        line-height: 1.6;
        color: $dark;
        &:hover {
            color: $dark;
        }
        &:focus, &:active {
            box-shadow: none !important;
        }
    }
    &__ans {
        max-width: 800px;
    }
}


// BLOG
// =============================================================================

// Homepage blog carousel
.blog-carousel {
    .owl-stage-outer {
        overflow: visible;
        .owl-stage {
            padding-left: 0 !important;
            .owl-item {
                opacity: 1;
                transition: opacity .15s ease-in-out;
                &.active {
                    opacity: 1;
                }
            }
        }
    }
    .owl-nav {
        margin-top: 2rem;
        text-align: left;
        .owl-prev {
            padding: 0;
            margin: 0 .5rem 0 0;
            color: #fff;
            width: 48px;
            height: 48px;
            border-radius: 50%;
            text-align: center;
            line-height: 48px;
            background: $accent;
            font-size: 20px;
            &:hover {
                background: $dark;
            }
            &.disabled {
                background: $accent;
                opacity: 0.5 !important;
            }
        }
        .owl-next {
            padding: 0;
            margin: 0;
            color: #fff;
            width: 48px;
            height: 48px;
            border-radius: 50%;
            text-align: center;
            line-height: 48px;
            background: $accent;
            font-size: 20px;
            &:hover {
                background: $dark;
            }
            &.disabled {
                background: $accent;
                opacity: 0.5 !important;
            }
        }
    }
}

// Post grid
.blog {
    overflow-x: hidden;
    &-list {
        [class^='col-'] {
            margin-bottom: 2rem;
            @media (max-width: 767.98px) {
                margin-bottom: 1rem;
            }
        }
    }
    &__heading-wrapper {
        @include rfs(3.5rem, margin-bottom);
        h2 {
            margin-bottom: 0;
        }
        .btn {
            @media (max-width: 767.98px) {
                padding-left: 0;
            }
        }
    }
}

// Blog page - Categories
.blog-categories {
    @include rfs(3.5rem, margin-bottom);
}

// Blog page - Tags
.blog-tags {
    @media (max-width: 991.98px) {
        @include rfs(3.5rem, margin-bottom);
    }
}

// Blog page - Similar posts
.blog-similar {
    .blog-list [class^='col-']:last-child {
        @include rfs(3.5rem, margin-bottom);
    }
}

// Blog page - Popular posts
.blog-popular {
    .blog-list [class^='col-']:last-child {
        margin-bottom: 0;
    }
}

// Post card
.post {
    border-radius: 4px;
    background-color: #fff;
    overflow: hidden;
    &__meta {
        @include font-size(1rem);
        opacity: 54%;
        line-height: 1;
        margin-bottom: 4px;
    }
    &__title {
        margin-bottom: 0.75rem;
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
    }
    &__excerpt {
        margin-bottom: 0;
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
    }
    &__link {
        position: absolute;
        bottom: 0;
    }
}

// Tag list
.tag-list {
    .list-inline-item {
        font-size: 1rem;
        margin: 0;
    }
}

// Post page
.single-post {
    &-meta {
        &__profile-image {
            width: 48px;
            height: 48px;
        }
        &__author {
            @include font-size(1rem);
            font-weight: 300;
        }
        &__date {
            @include font-size(1rem);
            color: rgba($dark, 0.54);
        }
    }
    &-share {
        &__title {
            @include font-size(1rem);
            font-weight: 300;
        }
        &__link {
            color: rgba($dark, 0.54);
            &:hover, &:focus {
                color: rgba($dark, 0.87);
            }       
        }
    }
    &-carousel {
        position: relative;
        .item {
            img {
                border-radius: 4px;
            }
        }
        .owl-nav {
            margin: 0;
            padding: 0;
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            display: flex;
            width: 100%;
            justify-content: space-between;
            .owl-prev {
                text-align: center;
                background: transparent !important;
                border-radius: 50%;
                color: rgba(white, 0.54);
                width: 48px;
                height: 48px;
                font-size: 20px;
                line-height: 48px;
                padding: 0;
                &:hover {
                    color: rgba(white, 1);
                }
            }
            .owl-next {
                text-align: center;
                background: transparent !important;
                border-radius: 50%;
                color: rgba(white, 0.54);
                width: 48px;
                height: 48px;
                font-size: 20px;
                line-height: 48px;
                padding: 0;
                &:hover {
                    color: rgba(white, 1);
                }
            }
        }
    }
    &__return-btn {
        margin-top: 3rem;
        display: inline-block;
    }
}

.aside {
    .blog-tags {
        @include rfs(3.5rem, margin-bottom);
    }
}
/* ... */

